<resources>
    <string name="app_name">Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="tidak_khawatir">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="mulai">memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="alamat">Alamat</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="idr">IDR</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="advengers_infinity_war">Advengers: Infinity War</string>
    <string name="action_sci_fi_kids">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_s_played">Whos\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="alita_battle">Alita Battle</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="a">A</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="seat_no_c1">Seat No. C1</string>
    <string name="seat_no_c2">Seat No. C2</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="_200_movie">200 Movie</string>
    <string name="email">Email</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">daftar akun baru</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate7">7</string>
    <string name="tittle">Tittle</string>
    <string name="genre">Genre</string>
</resources>